--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\WINDOWS\System32\SHELL32.dll,38
+IconResource=C:\Users\abdhe\Icons\Acem.ico,0
 [ViewState]
 Mode=
 Vid=
